--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+console = "0.15.7"
 directories = "5.0.1" # TODO: Stop using this crate since we only need the user's downloads directory.
 serde = { version = "1.0.173", features = ["derive"] }
 serde_json = "1.0.103"
