--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 console = "0.15.7"
+dialoguer = "0.10.4"
 directories = "5.0.1" # TODO: Stop using this crate since we only need the user's downloads directory.
 serde = { version = "1.0.173", features = ["derive"] }
 serde_json = "1.0.103"
