Very basic initial version of the GUI
Written in `egui` with `eframe`. Uses `rfd` for the file picker. Doesn't
download anything but that should be possibly maybe not definitely easy
to implement.

Conditional compilation with a Cargo feature is utilised to avoid
pulling in large dependencies for the CLI version, `yabw::run()` will
either have the previous definition, or the new definition which calls
`yabw::App::build()` to build the UI.

Other details:
- Cleaned up `main.rs`
- Made some structs and enums public, and some

Signed-off-by: Erick Howard <needlesslygrim@proton.me>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,10 @@ dialoguer = "0.10.4"
 directories = "5.0.1" # TODO: Stop using this crate since we only need the user's downloads directory.
 serde = { version = "1.0.173", features = ["derive"] }
 serde_json = "1.0.103"
+
+egui = { version = "0.22.0", optional = true }
+eframe = { version = "0.22.0", optional = true}
+rfd = { version = "0.11.4", optional = true, default-features = false, features = ["xdg-portal"]}
+
+[features]
+gui = ["egui", "eframe", "rfd"]
